--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       .animate-fade-in {
         animation: fadeIn 0.3s ease-out forwards;
       }
+
+      .notebook-paper {
+        background-color: #ffffff;
+        background-image: linear-gradient(#e5e7eb 1px, transparent 1px);
+        background-size: 100% 2rem;
+        line-height: 2rem;
+      }
     </style>
   <script type="importmap">
 {
