feat(ui): Add NumberInput component with increment/decrement
Introduces a new `NumberInput` component for a more user-friendly way of entering numbers. This component includes increment and decrement buttons to adjust values, improving the input experience for fractions and numerical answers within the game.

Also, refactors the `notebook-paper` CSS to include red lines, further enhancing the visual notebook theme.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,22 @@
 
       .notebook-paper {
         background-color: #ffffff;
-        background-image: linear-gradient(#e5e7eb 1px, transparent 1px);
-        background-size: 100% 2rem;
+        background-image: 
+          linear-gradient(90deg, transparent 3rem, #fca5a5 3rem, #fca5a5 3.1rem, transparent 3.1rem),
+          linear-gradient(#e5e7eb 1px, transparent 1px);
+        background-size: 100% 100%, 100% 2rem;
         line-height: 2rem;
+        background-attachment: local;
+      }
+
+      /* Hide number input arrows (spinners) */
+      .remove-arrow::-webkit-inner-spin-button, 
+      .remove-arrow::-webkit-outer-spin-button { 
+        -webkit-appearance: none; 
+        margin: 0; 
+      }
+      .remove-arrow { 
+        -moz-appearance: textfield; 
       }
     </style>
   <script type="importmap">
